# LRT-Python

./: 01_comments.py  02_variables.py  03_for_loop.py  05_string_method.py  06_user_input.py  07_boolean.py  08_method.py  09_lambda_function.py  10_exceptional_handling.py  11_random.py  12_math.py  13_collection.py  14_os.py  15_time.py  16_import.py  17_scope_of_variable.py  18_multiplication_table.py  19_math_operation.py  20_list.py  21_tuple.py  22_set.py  23_sample_program_1.py  24_dict.py  25_stone_paper_scissor.py  26_class.py  27_inheritence.py  28_keywords.py  29_swap_program.py  30_char_counter.py  31_eb_calculator.py  32_cricket_score_calc.py  33_bar_code.py  33_qr_code_generator.py  34_qr_code_scanner.py  35_bar_code_generator.py  36_face_recog.py  37_hand_recog.py  38_re_bot_game.py  39_eye_detection.py  40_whatsapp_msg.py  (+24 more)
Tools/: Result.xlsx  mark_updater.py  validator.py
Tools/submission/: Gopinath_Velumani_submission_script.py  Manjunath_Chandrasekaran_submission_script.py
