[tool.poetry]
name = "lrt_python"
version = "0.1.0"
description = ""
authors = ["suresh"]

[tool.poetry.dependencies]
python = "3.9"
pandas = "^1.4.3"
XlsxWriter = "^3.0.3"
opencv-python = "^4.6.0"
Pillow = "^9.2.0"
python-barcode = "^0.14.0"
qrcode = "^7.3.1"
mediapipe = "^0.8.10"
scipy = "^1.9.0"
pywhatkit = "^5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
